--- a/Task_1.ipynb
+++ b/Task_1.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 19,
    "metadata": {
     "collapsed": true,
     "jupyter": {
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -44,7 +44,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 3
+     "execution_count": 20
     }
    ],
    "source": [
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -65,7 +65,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 4
+     "execution_count": 21
     }
    ],
    "source": [
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -86,7 +86,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 5
+     "execution_count": 22
     }
    ],
    "source": [
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 23,
    "metadata": {
     "collapsed": true,
     "jupyter": {
@@ -114,12 +114,12 @@
    "outputs": [],
    "source": [
     "def foldl2(f, x0, lst):\n",
-    "    return foldr(lambda x, y: f(y,x), x0, lst[::-1])"
+    "    return foldr(lambda val, acc: lambda n: acc(f(n, val)), lambda x: x, lst)(x0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 24,
    "metadata": {
     "collapsed": true,
     "jupyter": {
@@ -129,12 +129,12 @@
    "outputs": [],
    "source": [
     "def foldr2(f, x0, lst):\n",
-    "    return foldl(lambda x, y: f(y,x), x0, lst[::-1])"
+    "    return foldl(lambda acc, val: lambda n: acc(f(val, n)), lambda x: x, lst)(x0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -145,7 +145,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 8
+     "execution_count": 25
     }
    ],
    "source": [
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 26,
    "metadata": {
     "collapsed": true,
     "jupyter": {
@@ -187,7 +187,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 9
+     "execution_count": 26
     }
    ],
    "source": [
@@ -212,14 +212,17 @@
   },
   {
    "source": [
-    "##### Манипулции со словарем O(1)\n",
-    "##### Проверка на равенство словарей O(1 * len(string.ascii_letters))\n",
-    "##### Учитывая цикл получаем сложность O(len(a))\n",
+    "##### Для словарей: \n",
+    "##### Получение элемента: O(1).\n",
+    "##### Установка элемента: O(1).\n",
+    "##### Удаление элемента: O(1).\n",
+    "##### Проверка на равенство словарей O(1) (от константы которая зависит от длинны алфавита)\n",
+    "##### Учитывая цикл получаем сложность O(n)\n",
+    "где n = len(a)\n",
     "\n",
     "\n",
     "\n",
-    " \n",
-    "\n"
+    " "
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -235,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -246,7 +249,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 10
+     "execution_count": 27
     }
    ],
    "source": [
@@ -295,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -326,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -337,7 +340,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 12
+     "execution_count": 29
     }
    ],
    "source": [
